force-app/main/default/objects/Dan360_Pedidos_por_cuota__c/Dan360_Pedidos_por_cuota__c.object-meta.xml
<CustomObject>
    <description>Objeto que relaciona los pedidos con las cuotas que se le aplicaron</description>
    <label>Pedidos por cuota</label>
    <nameField>
        <displayFormat>PedXCuo{0000}</displayFormat>
        <label>Nombre de Pedidos por cuota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos por Cuota</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>