force-app/main/default/objects/Dan360_Pedidos_por_cuota__c/fields/Dan360_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cantidad__c</fullName>
    <description>Cantidad de producto que consume cuota.</description>
    <label>Cantidad de producto del pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>