force-app/main/default/objects/Dan360_Pedidos_por_cuota__c/fields/Dan360_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cliente__c</fullName>
    <formula>Dan360_Pedido__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>