force-app/main/default/objects/Dan360_Pedidos_por_cuota__c/fields/Dan360_Cuota__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Cuota__c</fullName>
    <description>Cuota relacionada al pedido</description>
    <label>Cuota</label>
    <referenceTo>Dan360_Cuota__c</referenceTo>
    <relationshipLabel>Pedidos Por Cuota</relationshipLabel>
    <relationshipName>Dan360_PedidosPorCuota</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>