force-app/main/default/objects/Dan360_Pedidos_por_cuota__c/fields/Dan360_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Pedido__c</fullName>
    <description>Pedido relacionado a la cuota.</description>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos Por Cuota</relationshipLabel>
    <relationshipName>Dan360_PedidosPorCuota</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>