force-app/main/default/objects/Dan360_Pedidos_por_cuota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dan360_Pedido__c</columns>
    <columns>Dan360_Cuota__c</columns>
    <columns>Dan360_Cliente__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>